[package]
name = "arm_vcpu"
version = "0.1.0"
edition = "2021"

[dependencies]
spin = "0.9"
log = "=0.4.19"

cortex-a = "8.1.1"
aarch64-cpu = "9.3"
smccc = "0.1.1"
tock-registers = "0.8"

axerrno = "0.1.0"

axhal = { git = "https://github.com/arceos-hypervisor/arceos.git", rev = "5c9ee79", features = ["hv"] }
axaddrspace = { git = "https://github.com/arceos-hypervisor/axaddrspace.git", rev = "17378d" }
axvcpu = { git = "https://github.com/arceos-hypervisor/axvcpu.git" }
