[package]
name = "arm_vcpu"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
spin = "0.9"

aarch64-cpu = "9.3"
smccc = "0.1.1"
tock-registers = "0.8"
numeric-enum-macro = "0.2"

axerrno = "0.1.0"
percpu = "0.1.4"
crate_interface = "0.1"
lazy_static = { version = "1.5", features = ["spin_no_std"] }
axhal = { path = "../../arceos/modules/axhal" }
axaddrspace = { git = "https://github.com/arceos-hypervisor/axaddrspace.git" }
axvcpu = { git = "https://github.com/arceos-hypervisor/axvcpu.git", branch = "axvcpuhal" }
aarch64_sysreg = "0.1.1"